<resources>
    <string name="app_name">super-cep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Super-CEP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_save">Sauvegarder</string>

    <string name="menu_batiment">Batiment</string>
    <string name="menu_enveloppes">Enveloppe</string>
    <string name="menu_usageEtOccupation">Usage et occupation</string>
    <string name="menu_chauffages">Chauffage</string>
    <string name="menu_climatisation">Climatisation</string>
    <string name="menu_ventilation">Ventilation</string>
    <string name="menu_ecs">Eau chaude sanitaire</string>
    <string name="menu_approvisionnementEnergetique">Approvisionnement énergétique</string>
    <string name="menu_remarques">Remarques</string>
    <string name="menu_preconisations">Préconisations</string>
    <string name="menu_export">Export</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="default_calendrier_name">Calendrier</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_graphique">Graphique</string>
    <string name="surface_not_set">Impossible d\'afficher les ratio €/m² la surface chauffée est null</string>
    <string name="destinataire">sieml@sieml.fr</string>
    <string name="objet">Relevé bâtiment : </string>
</resources>